test-ui/ui/msg_send_super_not_classtype.stderr
error[E0277]: the trait bound `objc2::runtime::Object: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `objc2::runtime::Object`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `ClassType`:
            NSArray<T, O>
            NSAttributedString
            NSBundle
            NSData
            NSDictionary<K, V>
            NSError
            NSException
            NSMutableArray<T, O>
          and 13 others
note: required by a bound in `__send_super_message_static`
 --> $WORKSPACE/objc2/src/message/mod.rs
  |
  |         Self::__Inner: ClassType,
  |                        ^^^^^^^^^ required by this bound in `__send_super_message_static`

error[E0277]: the trait bound `objc2::runtime::Object: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `objc2::runtime::Object`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `ClassType`:
            NSArray<T, O>
            NSAttributedString
            NSBundle
            NSData
            NSDictionary<K, V>
            NSError
            NSException
            NSMutableArray<T, O>
          and 13 others
note: required by a bound in `__send_super_message_static`
 --> $WORKSPACE/objc2/src/message/mod.rs
  |
  |         <Self::__Inner as ClassType>::Super: ClassType,
  |                                              ^^^^^^^^^ required by this bound in `__send_super_message_static`
